# slave-team-ai

./: .gitignore  README.md  pyproject.toml
src/software_team/domain/: __init__.py  base.py  code_change.py  requirement.py  review.py  technical_plan.py  test_execution.py
src/software_team/quality_gates/: __init__.py  models.py  requirement_plan.py
tests/domain/: test_code_change.py  test_requirement.py  test_review.py  test_technical_plan.py  test_test_execution.py
tests/quality_gates/: test_models.py  test_requirement_plan.py
