[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "software-team-ai"
version = "0.1.0"
description = "A controlled multi-agent software delivery workflow"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.7,<3.0",
]


[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.25,<1.0",
    "ruff>=0.9,<1.0",
    "mypy>=1.14,<2.0",
]


[tool.hatch.build.targets.wheel]
packages = ["src/software_team"]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"


[tool.ruff]
line-length = 100
target-version = "py311"


[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]


[tool.mypy]
python_version = "3.11"
strict = true
packages = ["software_team"]